<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeDetailCar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="300dp"
                android:background="@drawable/ic_back_arrow"/>
            <CheckBox
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:gravity="center" />
        </LinearLayout>


        <TextView
            android:id="@+id/detail_modelCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/red"
            android:text="@string/mustang_mach_e"
            android:textSize="30sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/detail_brandCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/ford"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image_default"
            android:scaleType="fitCenter"
            android:src="@drawable/image_12" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp">
                <TextView
                    android:id="@+id/detail_horsepower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:text="@string/electrisch"
                    android:textSize="35sp"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/detail_horsepowerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/engine"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:id="@+id/detail_engine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:text="@string/lithium_ion"
                    android:textSize="35sp"
                    android:textAlignment="center"/>


                <TextView
                    android:id="@+id/detail_engineText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/batterij"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="35dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:id="@+id/detail_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:text="@string/jaar"
                    android:textSize="35sp"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/detail_yearText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/accelerate"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:text="@string/_68_kwh"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/accelerateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed100km"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp">
                <TextView
                    android:id="@+id/topSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:text="@string/rwd"
                    android:textSize="35sp"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/topSpeedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_speed"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>