<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">
<!--    android:background="@android:color/black"-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageCar"
                android:layout_width="203dp"
                android:layout_height="134dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/ferrari_model"
                android:scaleType="centerCrop"
                android:src="@drawable/ferrari_488_spider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/modelFerrari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/ferrari_model"
                    android:textSize="27sp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/brandCar"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/ferrari_brand"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btn_DetailCar"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/details"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recycler_main"-->
<!--        android:layout_margin="8dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@android:color/black"-->
<!--    tools:context=".ui.dashboard.DashboardFragment">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageView-->
<!--            android:id="@+id/ferrariSpider"-->
<!--            android:contentDescription="@string/ferrari_model"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="134dp"-->
<!--            android:layout_marginTop="0dp"-->
<!--            app:srcCompat="@drawable/ferrari_488_spider" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:id="@+id/modelFerrari"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:text="@string/ferrari_model"-->
<!--                android:textSize="27sp"-->
<!--                android:textColor="@color/red"/>-->
<!--            <TextView-->
<!--                android:id="@+id/brandFerrari"-->
<!--                android:layout_width="98dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:text="@string/ferrari_brand"-->
<!--                android:textSize="20sp"-->
<!--                android:textColor="@color/white"/>-->

<!--            <Button-->
<!--                android:id="@+id/btn_DetailCar"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="38dp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_marginTop="14dp"-->
<!--                android:backgroundTint="@color/red"-->
<!--                android:text="@string/details"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="14sp" />-->

<!--        </LinearLayout>-->
<!--    </LinearLayout>-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->